--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -176,6 +176,7 @@
 <!ENTITY Ctr_addonversion	"Tilføjelseslister: vis tilføjelsesversion">
 <!ENTITY Ctr_xpinstallui	"Gamle tilføjelser-installationsvindue (about:config-indstilling)">
 <!ENTITY Ctr_bmbutton		"Bogmærker-menuknap">
+<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panelmenu udseende">
 <!ENTITY Ctr_bmbunsortbm	"Popup: 'usorterede bogmærker'-undermenu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
