--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -176,6 +176,7 @@
 <!ENTITY Ctr_addonversion	"Add-on 'Übersicht': Versionsnummer von Add-ons anzeigen">
 <!ENTITY Ctr_xpinstallui	"Altes Add-on Installationsfenster (about:config Einstellung)">
 <!ENTITY Ctr_bmbutton		"Lesezeichen-Menüschaltfläche">
+<!ENTITY Ctr_hiderecentbm	"Lesezeichen Popup: verstecke zuletzt hinzugefügte Lesezeichen">
 <!ENTITY Ctr_bmbutpanelm	"Aufklappmenü: 'Panel'-Darstellung">
 <!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Unsortierte Lesezeichen' Menü">
 <!ENTITY Ctr_bmbunsortbm2	"Menü über den Lesezeichen">
