--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -176,6 +176,7 @@
 <!ENTITY Ctr_addonversion	"Lisćiny dodankow: wersiju dodanka pokazaś">
 <!ENTITY Ctr_xpinstallui	"Stare dodankowe instalěrowańske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłocašk menija cytańskich znamjenjow">
+<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: naglěd menijowego wuskokujucego wokna">
 <!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: meni 'Njesortěrowane cytańske znamjenja'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad cytańskimi znamjenjami">
