--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -176,6 +176,7 @@
 <!ENTITY Ctr_addonversion	"Λίστες πρόσθετων: εμφάνιση έκδοσης πρόσθετου">
 <!ENTITY Ctr_xpinstallui	"Παλιό παράθυρο εγκατάστασης πρόσθετων (προτίμηση «about:config»)">
 <!ENTITY Ctr_bmbutton		"Κουμπί μενού σελιδοδεικτών">
+<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_bmbutpanelm	"Αναδυόμενο: εμφάνιση ως μενού πίνακα">
 <!ENTITY Ctr_bmbunsortbm	"Αναδυόμενο: υπομενού «Αταξινόμητοι σελιδοδείκτες»">
 <!ENTITY Ctr_bmbunsortbm2	"Πάνω από τους σελιδοδείκτες">
