--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -176,6 +176,7 @@
 <!ENTITY Ctr_addonversion	"Mostrar la versión del complemento">
 <!ENTITY Ctr_xpinstallui	"Antiguo diálogo de instalación (about:config >> xpinstall.customConfirmationUI)">
 <!ENTITY Ctr_bmbutton		"Botón de menú emergente de Marcadores">
+<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_bmbutpanelm	"Estilo de panel para el menú emergente ">
 <!ENTITY Ctr_bmbunsortbm	"Mostrar submenú 'Marcadores no ordenados'">
 <!ENTITY Ctr_bmbunsortbm2	"Menú por encima de los marcadores">
