--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"R">
 <!ENTITY appMenuGettingStarted.label	"Prědne kšace">
 <!ENTITY goCmd.label					"Start">
-<!ENTITY Ctr_menu_restart.label			"&brandShortName; znowego startowaś">
-<!ENTITY Ctr_restartapp					"'&brandShortName;' znowego startowaś pód tłocaškom '&brandShortName;' a w meniju Dataja">
+<!ENTITY Ctr_menu_restart.label			"Znowego startowaś">
+<!ENTITY Ctr_restartapp					"Znowego startowaś pód tłocaškom '&brandShortName;' a w meniju Dataja">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"S">
