--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"λ">
 <!ENTITY appMenuGettingStarted.label	"Ξεκινώντας">
 <!ENTITY goCmd.label					"Μετάβαση">
-<!ENTITY Ctr_menu_restart.label			"Επανεκκίνηση &brandShortName;">
-<!ENTITY Ctr_restartapp					"«Επανεκκίνηση &brandShortName;» στα μενού κουμπιού εφαρμογής και «Αρχείο»">
+<!ENTITY Ctr_menu_restart.label			"Επανεκκίνηση">
+<!ENTITY Ctr_restartapp					"«Επανεκκίνηση» στα μενού κουμπιού εφαρμογής και «Αρχείο»">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"Π">
