--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Alustamine">
 <!ENTITY goCmd.label					"Mine">
-<!ENTITY Ctr_menu_restart.label			"Taaskäivita &brandShortName;">
-<!ENTITY Ctr_restartapp					"'Taaskäivita &brandShortName;' nupumenüüs ja menüüs Fail">
+<!ENTITY Ctr_menu_restart.label			"Taaskäivita">
+<!ENTITY Ctr_restartapp					"'Taaskäivita' nupumenüüs ja menüüs Fail">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"T">
