--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"D">
 <!ENTITY appMenuGettingStarted.label	"Pour commencer">
 <!ENTITY goCmd.label					"Aller à">
-<!ENTITY Ctr_menu_restart.label			"Redémarrer &brandShortName;">
-<!ENTITY Ctr_restartapp					"« Redémarrer &brandShortName; » dans le menu de l'application et le menu Fichier">
+<!ENTITY Ctr_menu_restart.label			"Redémarrer">
+<!ENTITY Ctr_restartapp					"« Redémarrer » dans le menu de l'application et le menu Fichier">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"d">
