--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"d">
 <!ENTITY appMenuGettingStarted.label	"Prěnje kroki">
 <!ENTITY goCmd.label					"Start">
-<!ENTITY Ctr_menu_restart.label			"&brandShortName; znowa startować">
-<!ENTITY Ctr_restartapp					"'&brandShortName;' znowa startować pod tłóčatkom '&brandShortName;' a w meniju 'Dataja'">
+<!ENTITY Ctr_menu_restart.label			"Znowa startować">
+<!ENTITY Ctr_restartapp					"Znowa startować pod tłóčatkom '&brandShortName;' a w meniju 'Dataja'">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"W">
