--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey	"B">
 <!ENTITY appMenuGettingStarted.label	"Primi passi">
 <!ENTITY goCmd.label		"Vai">
-<!ENTITY Ctr_menu_restart.label			"Riavvia &brandShortName;">
-<!ENTITY Ctr_restartapp					"'Riavvia &brandShortName;' nel menu dell’applicazione e nel menu File">
+<!ENTITY Ctr_menu_restart.label			"Riavvia">
+<!ENTITY Ctr_restartapp					"'Riavvia' nel menu dell’applicazione e nel menu File">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "I">
