--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Начало работы">
 <!ENTITY goCmd.label					"Перейти">
-<!ENTITY Ctr_menu_restart.label			"Перезапуск &brandShortName;">
-<!ENTITY Ctr_restartapp					"'Перезапуск &brandShortName;' в меню приложения/файл">
+<!ENTITY Ctr_menu_restart.label			"Перезапуск">
+<!ENTITY Ctr_restartapp					"'Перезапуск' в меню приложения/файл">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"Н">
