--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"d">
 <!ENTITY appMenuGettingStarted.label	"Začetek">
 <!ENTITY goCmd.label					"Pojdi">
-<!ENTITY Ctr_menu_restart.label			"Ponovno zaženi &brandShortName;">
-<!ENTITY Ctr_restartapp					"'Ponovno zaženi &brandShortName;' v programskem meniju in meniju Datoteka">
+<!ENTITY Ctr_menu_restart.label			"Ponovno zaženi">
+<!ENTITY Ctr_restartapp					"'Ponovno zaženi' v programskem meniju in meniju Datoteka">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"N">
