--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Початок роботи">
 <!ENTITY goCmd.label					"Перейти">
-<!ENTITY Ctr_menu_restart.label			"Рестарт &brandShortName;">
-<!ENTITY Ctr_restartapp					"«Рестарт &brandShortName;» в кнопці програми та в меню «Файл»">
+<!ENTITY Ctr_menu_restart.label			"Рестарт">
+<!ENTITY Ctr_restartapp					"«Рестарт» в кнопці програми та в меню «Файл»">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"Н">
