--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"开始使用">
 <!ENTITY goCmd.label					"转到">
-<!ENTITY Ctr_menu_restart.label			"重启 &brandShortName;">
-<!ENTITY Ctr_restartapp					"在应用菜单和文件菜单中显示 “重启 &brandShortName;”">
+<!ENTITY Ctr_menu_restart.label			"重启">
+<!ENTITY Ctr_restartapp					"在应用菜单和文件菜单中显示 “重启”">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"B">
