--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -368,8 +368,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Pierwsze kroki">
 <!ENTITY goCmd.label					"Przejdź">
-<!ENTITY Ctr_menu_restart.label			"Zrestartuj program">
-<!ENTITY Ctr_restartapp					"'Zrestartuj program' w menu programu &brandShortName; oraz w menu Plik">
+<!ENTITY Ctr_menu_restart.label			"Zrestartuj">
+<!ENTITY Ctr_restartapp					"'Zrestartuj' w menu programu &brandShortName; oraz w menu Plik">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"W">
