--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -84,9 +84,9 @@
 <!ENTITY Ctr_appbutton2		"Auf der &brandShortName;-Titelleiste">
 <!ENTITY Ctr_appbutton2h	"Auf der &brandShortName;-Titelleiste (versteckt)">
 <!ENTITY Ctr_appbutton2io	"Auf der &brandShortName;-Titelleiste (nur Symbol)">
-<!ENTITY Ctr_paneluibtweak	"Menüschaltfläche visuell als &brandShortName;-Schaltfläche...">
-<!ENTITY Ctr_paneluibtweak2	"Menüschaltfläche visuell als &brandShortName;-Schaltfläche (nur Symbol)...">
-<!ENTITY Ctr_paneluibtweak3	"...darstellen, wenn sie sich auf der Tableiste befindet.">
+<!ENTITY Ctr_paneluibtweak	"Menüschaltfläche visuell als &brandShortName;-Schaltfläche …">
+<!ENTITY Ctr_paneluibtweak2	"Menüschaltfläche visuell als &brandShortName;-Schaltfläche (nur Symbol) …">
+<!ENTITY Ctr_paneluibtweak3	"… darstellen, wenn sie sich auf der Tableiste befindet.">
 <!ENTITY Ctr_appbuttonc_o	"Orange Schaltflächenfarbe (Standard)">
 <!ENTITY Ctr_appbuttonc_a	"Blaue Schaltflächenfarbe (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Schwarze Schaltflächenfarbe (Nightly)">
@@ -95,7 +95,7 @@
 <!ENTITY Ctr_appbuttonc_r	"Rote Schaltflächenfarbe">
 <!ENTITY Ctr_appbuttonc_g	"Grüne Schaltflächenfarbe">
 <!ENTITY Ctr_appbuttonc_gr	"Graue Schaltflächenfarbe">
-<!ENTITY Ctr_appbuttonc_pu	"Violette Schaltflächenfarbe (Privatmodus)">
+<!ENTITY Ctr_appbuttonc_pu	"Violette Schaltflächenfarbe (Privater Modus)">
 <!ENTITY Ctr_appbuttonc_wh	"Weiße Schaltflächenfarbe">
 <!ENTITY Ctr_appbuttonc_cu	"Eigene Schaltflächenfarbe">
 <!ENTITY Ctr_appbuttonct	"Eigene Farbe für Schaltfläche auf Symbolleisten">
@@ -106,7 +106,7 @@
 <!ENTITY Ctr_appbautocol	"Browserkanalfarben automatisch setzen (Standard/Aurora/Nightly)">
 <!ENTITY Ctr_appbutbdl		"Ränder und Hintergrundfarbe entfernen">
 <!ENTITY Ctr_dblclclosefx	"Doppelklick schließt aktuelles Fenster">
-<!ENTITY Ctr_appbclmmenus	"Klickbare Menüs im '&brandShortName;-Menü' (Neuer Tab, Drucken...)">
+<!ENTITY Ctr_appbclmmenus	"Klickbare Menüs im '&brandShortName;-Menü' (Neuer Tab, Drucken …)">
 <!ENTITY Ctr_appbutonclab	"Titel">
 <!ENTITY Ctr_appbutonclab2	"Titel eintragen oder leer lassen">
 
@@ -117,8 +117,8 @@
 <!ENTITY Ctr_backforward	"Verschiebbare Vor-Zurück-Schaltflächen">
 <!ENTITY Ctr_nbcompact		"Höhe der Navigationsleiste reduzieren">
 <!ENTITY Ctr_hide_bf_popup	"Chronik-Aufklappmenü bei gedrückter Maustaste verstecken">
-<!ENTITY Ctr_bf_space		"Reduziere Zwischenraum (falls möglich)">
-<!ENTITY Ctr_noconicons		"Seitenkontextmenü: Symbole durch Namen ersetzen (Zurück, Vor...)">
+<!ENTITY Ctr_bf_space		"Zwischenraum reduzieren (falls möglich)">
+<!ENTITY Ctr_noconicons		"Seitenkontextmenü: Symbole durch Namen ersetzen (Zurück, Vor …)">
 <!ENTITY Ctr_prefpage		"Einstellungsseite / -fenster">
 <!ENTITY Ctr_altoptionsd	"Standard-Darstellung">
 <!ENTITY Ctr_altoptionsp	"Alternative Darstellung">
@@ -184,7 +184,7 @@
 <!ENTITY Ctr_bmbnounsort	"Aufklappmenü: 'Unsortierte Lesezeichen' verstecken">
 <!ENTITY Ctr_bmbutnotext	"Text auf der Lesezeichenleiste verstecken">
 <!ENTITY Ctr_skipprintpr	"Drucken-Schaltfläche: Druckvorschau überspringen">
-<!ENTITY Ctr_tbconmenu		"Leisten-Kontextmenü: 'In Menü verschieben', 'Aus Symbolleiste entfernen', 'Alle Tabs neu laden', 'Lesezeichen für alle Tabs hinzufügen...' und 'Geschlossenen Tab wiederherstellen' verstecken">
+<!ENTITY Ctr_tbconmenu		"Leisten-Kontextmenü: 'In Menü verschieben', 'Aus Symbolleiste entfernen', 'Alle Tabs neu laden', 'Lesezeichen für alle Tabs hinzufügen …' und 'Geschlossenen Tab wiederherstellen' verstecken">
 <!ENTITY Ctr_noresizerxp	"'Resizer' verstecken (Windows XP/2000)">
 <!ENTITY Ctr_extraurlkeycb	"Weitere Adressleiste öffnen (Cmd/Strg+">
 <!ENTITY Ctr_pmhidelabels	"Menüschaltflächen-Aufklappmenü: Schaltflächen-Text verstecken">
@@ -290,9 +290,9 @@
 <!ENTITY Ctr_menubarnofog	"Hintergrundfarbe/-nebel entfernen (Windows Aero Glass / Windows 8)">
 
 <!ENTITY Ctr_aerocolors		"Blaue 'Aero'-Farben für Leisten (und Tabs)">
-<!ENTITY Ctr_transpttbw10	"Titel/Menü/Tabs Leiste: Hintergrundfarbe entfernen">
+<!ENTITY Ctr_transpttbw10	"Titel-/Menü-/Tableiste: Hintergrundfarbe entfernen">
 <!ENTITY Ctr_transpttbew10	"Weitere Anpassungen für einige OS-Themen">
-<!ENTITY Ctr_transptcw10	"Standardschaltflächen 'Minimieren / Maximieren / Schließen' verstecken">
+<!ENTITY Ctr_transptcw10	"Standardschaltflächen 'Minimieren/Maximieren/Schließen' verstecken">
 <!ENTITY Ctr_hidenavbar		"Leiste verstecken">
 <!ENTITY Ctr_navbarpad		"Zusätzliche Abstände links und rechts">
 <!ENTITY Ctr_navbarpad_l	"Links:">
@@ -320,7 +320,7 @@
 <!ENTITY Ctr_tabanimation	"'Tab schließen und öffnen' (about:config-Einstellung)">
 <!ENTITY Ctr_dlanimation	"'Download gestartet und beendet' (about:config-Einstellung)">
 <!ENTITY Ctr_fsanimation	"'Vollbild-Animationen' (about:config-Einstellung)">
-<!ENTITY Ctr_fsaduration	"'Vollbild-Animationen' für HTML5-Inhalte (about:config-Einstellungen)">
+<!ENTITY Ctr_fsaduration	"'Vollbild-Animationen' für HTML5-Inhalte">
 
 <!ENTITY Ctr_toolsitem		"Eintrag im Menü 'Extras'">
 <!ENTITY Ctr_appmenuitem	"Eintrag im Einstellungsuntermenü der &brandShortName;-Schaltfläche">
