--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -71,7 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Приховати для однієї видимої вкладки">
 <!ENTITY Ctr_closei_def		"Типові іконки">
 <!ENTITY Ctr_closeonleft	"Альтернативна позиція на вкладці">
-<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
+<!ENTITY Ctr_closetabbig	"Велика іконка (20x20 пікс)">
 <!ENTITY Ctr_close_wwltab	"Закрити вікно з останньою видимою вкладкою (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Деякі різновиди вкладок не сумісні з додатком Hide Caption Titlebar Plus.">
@@ -171,8 +171,8 @@
 <!ENTITY Ctr_am_compact		"Список додатків: компактний вигляд">
 <!ENTITY Ctr_am_compact2	"Компактний вигляд +">
 <!ENTITY Ctr_am_highlight	"Список додатків: підсвічування напису при наведенні миші">
-<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
-<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
+<!ENTITY Ctr_am_buticons	"Список додатків: замінити написи на кнопках іконками">
+<!ENTITY Ctr_am_hovshowb	"Список додатків: показувати кнопки тільки при наведенні миші">
 <!ENTITY Ctr_addonversion	"Список додатків у Менеджері додатків: показати версію додатка">
 <!ENTITY Ctr_xpinstallui	"Менеджер додатків: старе вікно встановлення додатків (about:config preference)">
 <!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
@@ -242,7 +242,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Не показувати сірий колір при наведенні миші">
 <!ENTITY Ctr_ib_graycolor	"Сірий колір для неопізнаних та «жовтих» сторінок">
 <!ENTITY Ctr_verifiedcolors	"Кольори кнопок для перевірених вебсайтів, захищених і незахищених з’єднань">
-<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico		"Поміняти «i»-іконку на глобальну іконку">
 <!ENTITY Ctr_faviconurl		"Значок сайту">
 <!ENTITY Ctr_padlock		"Замок">
 <!ENTITY Ctr_padlock_hid	"прихований">
