--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -177,6 +177,7 @@
 <!ENTITY Ctr_xpinstallui	"Altes Add-on-Installationsfenster (about:config-Einstellung)">
 <!ENTITY Ctr_bmbutton		"Lesezeichen-Menüschaltfläche">
 <!ENTITY Ctr_hiderecentbm	"Lesezeichen-Popup: Zuletzt hinzugefügte Lesezeichen verstecken">
+<!ENTITY Ctr_hideeditbm		"Lesezeichen-Stern: Popup verstecken (wenn Seite noch kein Lesezeichen ist)">
 <!ENTITY Ctr_bmbutpanelm	"Aufklappmenü: 'Panel'-Darstellung">
 <!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Unsortierte Lesezeichen'-Menü">
 <!ENTITY Ctr_bmbunsortbm2	"Menü über den Lesezeichen">
@@ -237,6 +238,7 @@
 <!ENTITY Ctr_urlbardropm2	"Aufklapp-Schaltfläche immer anzeigen">
 <!ENTITY Ctr_altreaderico	"Alternative Symbole für die 'Lese-Modus'-Schaltfläche">
 <!ENTITY Ctr_hideprbutton	"'Infosymbol' verstecken (wenn ein Popup-Fenster blockiert wurde)">
+<!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren (about:config Einstellung)">
 <!ENTITY Ctr_locsearchbw10	"Höhe der Adress- und Suchleiste reduzieren (experimentell)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
 <!ENTITY Ctr_ib_nohovcolor	"Graue Farbe beim 'Hovern' nicht anzeigen">
