--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -177,6 +177,7 @@
 <!ENTITY Ctr_xpinstallui	"Gamle tilføjelser-installationsvindue (about:config-indstilling)">
 <!ENTITY Ctr_bmbutton		"Bogmærker-menuknap">
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
+<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panelmenu udseende">
 <!ENTITY Ctr_bmbunsortbm	"Popup: 'usorterede bogmærker'-undermenu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
@@ -237,6 +238,7 @@
 <!ENTITY Ctr_urlbardropm2	"Make dropmarker always visible">
 <!ENTITY Ctr_altreaderico	"Alternative 'Læser'-ikoner">
 <!ENTITY Ctr_hideprbutton	"Skjul notifikationsikonet når en popup blokeres">
+<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_locsearchbw10	"Reducér adresselinjers og søgelinjers højde (eksperimentel)">
 <!ENTITY Ctr_urlbar_ib		"Knappen Identitet for websted (Identitet boks)">
 <!ENTITY Ctr_ib_nohovcolor	"Vis ikke grå farve når der peges på">
