--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -177,6 +177,7 @@
 <!ENTITY Ctr_xpinstallui	"Stare dodankowe instalěrowańske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłocašk menija cytańskich znamjenjow">
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
+<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
 <!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: naglěd menijowego wuskokujucego wokna">
 <!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: meni 'Njesortěrowane cytańske znamjenja'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad cytańskimi znamjenjami">
@@ -237,6 +238,7 @@
 <!ENTITY Ctr_urlbardropm2	"Tłocašk špica šypki pśecej pokazaś">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'cytakowe' symbole">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
+<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_locsearchbw10	"Wusokosć adresowych a pytańskich pólow reducěrowaś (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
 <!ENTITY Ctr_ib_nohovcolor	"Šeru barwu pód kursorom myški njepokazaś">
