--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -61,7 +61,7 @@
 <!ENTITY Ctr_emptytfavico_n	"Ninguno">
 <!ENTITY Ctr_emptytfavico_g	"Genérico">
 <!ENTITY Ctr_noemptypticon	"Eliminar favicon vacío en pestañas fijadas">
-<!ENTITY Ctr_e10stab_notd	"Pestañas E10s: Eliminar subrayado">
+<!ENTITY Ctr_e10stab_notd	"Pestañas E10s (multiproceso): Eliminar subrayado">
 <!ENTITY Ctr_closetab_0		"Botón de cierre de pestaña">
 <!ENTITY Ctr_closetab_1		"Sólo en la pestaña activa">
 <!ENTITY Ctr_closetab_2		"En ninguna parte">
@@ -71,7 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Ocultar para una sola pestaña visible">
 <!ENTITY Ctr_closei_def		"Iconos predeterminados">
 <!ENTITY Ctr_closeonleft	"Posición alternativa en la pestaña">
-<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
+<!ENTITY Ctr_closetabbig	"Icono más grande (20x20 px)">
 <!ENTITY Ctr_close_wwltab	"Cerrar ventana con última pestaña (about:config >> browser.tabs.closeWindowWithLastTab)">
 
 <!ENTITY Ctr_hctpinfotab	"Algunas variantes no funcionan con el complemento 'Hide Caption Titlebar Plus'.">
@@ -168,15 +168,16 @@
 <!ENTITY Ctr_alt_addonsp	"Página 'más información': Apariencia alternativa">
 <!ENTITY Ctr_alt_addonsm	"Apariencia alternativa">
 <!ENTITY Ctr_am_nowarning	"Ocultar advertencias en las listas de complementos">
-<!ENTITY Ctr_am_compact		"Listas de complementos: Vista compacta">
+<!ENTITY Ctr_am_compact		"Vista compacta de las listas">
 <!ENTITY Ctr_am_compact2	"Vista compacta +">
-<!ENTITY Ctr_am_highlight	"Listas de complementos: Resaltar entrada al señalarla">
-<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
-<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
+<!ENTITY Ctr_am_highlight	"Resaltar entradas de las listas al señalarlas">
+<!ENTITY Ctr_am_buticons	"Reemplazar etiquetas de los botones de los complementos con iconos">
+<!ENTITY Ctr_am_hovshowb	"Sólo mostrar botones de los complementos al señalar su entrada con el ratón (hover)">
 <!ENTITY Ctr_addonversion	"Mostrar la versión del complemento">
 <!ENTITY Ctr_xpinstallui	"Antiguo diálogo de instalación (about:config >> xpinstall.customConfirmationUI)">
 <!ENTITY Ctr_bmbutton		"Botón de menú emergente de Marcadores">
-<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
+<!ENTITY Ctr_hiderecentbm	"Menú emergente de Marcadores: Ocultar marcadores añadidos recientemente">
+<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
 <!ENTITY Ctr_bmbutpanelm	"Estilo de panel para el menú emergente ">
 <!ENTITY Ctr_bmbunsortbm	"Mostrar submenú 'Marcadores no ordenados'">
 <!ENTITY Ctr_bmbunsortbm2	"Menú por encima de los marcadores">
@@ -237,12 +238,13 @@
 <!ENTITY Ctr_urlbardropm2	"Hacer siempre visible la flecha de despliegue">
 <!ENTITY Ctr_altreaderico	"Iconos de 'Vista de lectura' alternativos">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
+<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_locsearchbw10	"Reducir altura de la barra de direcciones y el recuadro de búsqueda (experimental)">
 <!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio (recuadro de identidad)">
 <!ENTITY Ctr_ib_nohovcolor	"No mostrar color gris al señalarlo">
 <!ENTITY Ctr_ib_graycolor	"Color gris para identidades desconocidas y páginas chrome://">
 <!ENTITY Ctr_verifiedcolors	"Botón coloreado para sitios web verificados, y conexiones seguras y no seguras">
-<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico		"Reemplazar icono-'i' con un icono de globo terráqueo">
 <!ENTITY Ctr_faviconurl		"Mostrar favicon del sitio web">
 <!ENTITY Ctr_padlock		"Candado para conexiones seguras">
 <!ENTITY Ctr_padlock_hid	"oculto">
@@ -368,8 +370,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"C">
 <!ENTITY appMenuGettingStarted.label	"Comenzar">
 <!ENTITY goCmd.label					"Ir">
-<!ENTITY Ctr_menu_restart.label			"Restart">
-<!ENTITY Ctr_restartapp					"'Restart' in &brandShortName;-menu and file menu">
+<!ENTITY Ctr_menu_restart.label			"Reiniciar">
+<!ENTITY Ctr_restartapp					"'Reiniciar' en el menú-&brandShortName; y el menú 'Archivo'">
 
 <!-- For page context entries. Have to be adjusted for every locale! a-s-r-p-m -->
 <!ENTITY backCmd.accesskey				"n">
