--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -177,6 +177,7 @@
 <!ENTITY Ctr_xpinstallui	"Stary přidatkowe instalowanske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłóčatko menija zapołožkow">
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
+<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
 <!ENTITY Ctr_bmbutpanelm	"Wuskakowacy meni: napohlad wuskakowaceho menija">
 <!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: meni 'Njesortěrowane zapołožki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zapołožkami">
@@ -237,6 +238,7 @@
 <!ENTITY Ctr_urlbardropm2	"Tłóčtko šipkoweho kónčka přeco pokazać">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'čitakowe' symbolei">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
+<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
 <!ENTITY Ctr_ib_nohovcolor	"Pod kursorom myški šěru barbu njepokazać">
